GNOME Bugzilla – Bug 684475
Potential infinite loop in migrate_account_to_uoa
Last modified: 2012-09-21 06:46:53 UTC
supersedes = tp_account_get_supersedes (account); while (*supersedes != NULL) tp_account_request_add_supersedes (ar, *supersedes);
Created attachment 224831 [details] [review] migrate_account_to_uoa: actually iterate over the supersedes array I'm not a fan of pointer arithmetic, it's clearer to iterate using an index.
+1
Attachment 224831 [details] pushed as 25c6dfd - migrate_account_to_uoa: actually iterate over the supersedes array