migrate_account_to_uoa: actually iterate over the supersedes array

I'm not a fan of pointer arithmetic, it's clearer to iterate using an index.

https://bugzilla.gnome.org/show_bug.cgi?id=684475